# Persistent-Agent

./: .env.example  .gitignore  Cargo.toml  README.md
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: api.ts  main.tsx  styles.css  types.ts
crates/persistent-agent-agent/: Cargo.toml
crates/persistent-agent-agent/src/: lib.rs
crates/persistent-agent-api/: Cargo.toml
crates/persistent-agent-api/src/: lib.rs
crates/persistent-agent-db/: Cargo.toml
crates/persistent-agent-db/migrations/: 202606160001_initial.sql  202606160002_memory_status.sql  202606160003_task_attempt_events.sql  202606160004_task_artifacts.sql  202606160005_task_dependencies.sql  202606170001_task_notes.sql  202606170002_task_resource_locks.sql
crates/persistent-agent-db/src/: lib.rs
crates/persistent-agent-domain/: Cargo.toml
crates/persistent-agent-domain/src/: lib.rs
crates/persistent-agent-scheduler/: Cargo.toml
crates/persistent-agent-scheduler/src/: lib.rs
docs/: HARNESS_REMEDIATION_PLAN.md  TECH_SELECTION.md
