[package]
name = "persistent-agent-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
persistent-agent-db = { path = "../persistent-agent-db" }
persistent-agent-domain = { path = "../persistent-agent-domain" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
