[package]
name = "persistent-agent-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
persistent-agent-domain = { path = "../persistent-agent-domain" }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
